--- a/resources/styles.css
+++ b/resources/styles.css
@@ -1,25 +1,92 @@
 body {
     font-size: 2vmin;
-    font-family: "Helvetica Neue", Arial, sans-serif;
+    font-family: -system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, "Helvetica Neue", Arial, sans-serif;
+    padding-left: 14rem;
+    margin: 0;
+    color: #444;
 }
 * {
     font-size: inherit;
 }
 h1 {
     font-size: 6vmin;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     text-align: center;
+}
+h2 {
+    font-size: 5vmin;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+    text-align: center;
+}
+h3 {
+    font-size: 2.5vmin;
+    margin-bottom: 0.5rem;
 }
 div.message {
     text-align: center;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 14rem;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: #f8f8f8;
+}
+p {
+    color: #777;
+    margin-top: 0;
+}
+a {
+    color: #111;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+.v-spacer {
+    height: 6rem;
+}
+section {
+    padding: 6rem;
+    min-height: 100vh;
+    box-sizing: border-box;
+}
+section h1, h2 {
+    text-align: left;
+}
+.subheading {
+    font-weight: bold;
+}
+.left-right {
+    display: flex;
+    justify-content: space-between;
+}
+
+.profile_img {
+	height: 12rem;
+	width: 12rem;
+	padding: 0 4rem 0 4rem;
+}
+
+body > h1 {
+    padding-top: 6rem;
 }
 
 input, button {
-    padding: 0.5em 0.5em;
-    margin: 0.5em;
+    padding: 0.5rem 0.5rem;
+    margin: 0.5rem;
 }
 button, .textInput {
-    width: calc(100% - 1em - 2px);
+    width: calc(100% - 1rem - 2px);
 }
 .login_container {
     width: 30vmin;
