--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -1,8 +1,10 @@
 <html>
 <head>
-<link rel='stylesheet' type='text/css' href='resources/styles.css'>
+{{> header_content }}
 </head>
 <body>
+{{> nav_side }}
+
 <h1>Rust Home</h1>
 {{#if login_failed}}
 <div class="message">Username or password incorrect, please try again</div>
@@ -16,5 +18,6 @@
         <button type="submit">Login</button>
     </form>
 </div>
+
 </body>
 </html>
